@@ -7,11 +7,18 @@
     
 void Parser::checkFirstType() 
 {
+    // The default (STD) action is to add $$ = $1, unconditionally
+
     // stype and union types by default use the $$ = $1 option
     // polymorphic types check the semantic value type of the first
     // production element 
 
-    if (d_semType == POLYMORPHIC) 
+    if 
+    (
+        d_options.defaultActions().value != Options::STD 
+        &&
+        d_semType == POLYMORPHIC
+    ) 
     {
         defaultPolymorphicAction();
         return;
