@@ -4,12 +4,9 @@ void Parser::expectRules()
 {
     d_options.setParsingOptions();
 
-        // default $$ = $1 actions are performed by default:
-        // quietly for SINGLE and UNION, with warnings for POLYMORPHIC:
-        //
+        // by default $$ = $1 actions are added when there's no action block.
     if (d_options.defaultActions().value == Options::UNKNOWN)
-        d_options.setDefaultAction(
-            d_semType == POLYMORPHIC ? "warn" : "quiet", "", 0);
+        d_options.setDefaultAction("std", "", 0);
 
     d_scanner.clearBlock();
 
