@@ -1,4 +1,4 @@
-// Generated by Bisonc++ V5.00.00 on Thu, 07 Apr 2016 18:36:29 +0530
+// Generated by Bisonc++ V5.00.00 on Fri, 08 Apr 2016 10:28:05 +0530
 
 // $insert class.ih
 #include "parser.ih"
@@ -1849,7 +1849,7 @@ try
 
         case 4:
         {
-         d_field = d_vsp__[-1].get<Tag__::TEXT>(); 
+         checkField(d_vsp__[-1].get<Tag__::TEXT>()); 
          }
         break;
 
