@@ -7,5 +7,6 @@ void Parser::setUnionDecl()
     d_atDollar = &s_union;      // MUST have an associated return type if
 }                               // a plain $$ is used. Also, a union must
                                 // be available if a $<field> construction
-                                // is used.
+                                // is used. (unless default-actions std is 
+                                // was specified
 
